@@ -181,6 +181,7 @@ class FrameHolder {
                 createSubFrames( frame, response.getFrameSelectors() );
                 WebRequest[] requests = response.getFrameRequests();
                 for (int i = 0; i < requests.length; i++) response.getWindow().getSubframeResponse( requests[ i ], requestContext );
+                HttpUnitOptions.getScriptingEngine().load( response );
             }
         }
     }
